--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,7 +64,7 @@ services:
       REDIS_HOST: redis_cache
       REDIS_PORT: 6379
       DB_HOST: postgres_db # Usado se o Node se conectar diretamente
-      DB_PORT: 5432      # Usado se o Node se conectar diretamente
+      DB_PORT: 5432 # Usado se o Node se conectar diretamente
       POSTGRES_DB: ${POSTGRES_DB} # Para consistência e se o Node precisar
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -97,7 +97,11 @@ services:
     networks:
       - chat_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER:-admin_user} -d $${POSTGRES_DB:-chat_application_db} -q"]
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U $${POSTGRES_USER:-admin_user} -d $${POSTGRES_DB:-chat_application_db} -q",
+        ]
       interval: 5s
       timeout: 5s
       retries: 10
@@ -118,6 +122,20 @@ services:
       retries: 5
       start_period: 5s
     restart: unless-stopped
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    networks:
+      - chat-net
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 networks:
   chat_network:
