--- a/auth-api/dockerfile
+++ b/auth-api/dockerfile
@@ -1,16 +1,17 @@
-FROM php:8.1-apache
-
-
-RUN a2enmod rewrite
-
+FROM php:8.2-cli
 
 RUN apt-get update && apt-get install -y \
+    libzip-dev \
+    unzip \
     libpq-dev \
     && docker-php-ext-install pdo pdo_pgsql \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+    && pecl install redis \
+    && docker-php-ext-enable redis
 
+WORKDIR /app
 
-COPY ./src/ /var/www/html/
+COPY . .
 
-EXPOSE 80
+EXPOSE 3000
+
+CMD ["php", "-S", "0.0.0.0:3000", "index.php"]
