--- a/receive-send-api/dockerfile
+++ b/receive-send-api/dockerfile
@@ -1,13 +1,13 @@
 FROM node:18-alpine
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
 RUN npm install
 
-COPY ./src/ .
+COPY . ./
 
 EXPOSE 3000
 
-CMD [ "node", "server.js" ]
+CMD [ "node", "src/server.js" ]
