--- a/receive-send-api/package.json
+++ b/receive-send-api/package.json
@@ -17,9 +17,10 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.0.0",
+    "dotenv": "^16.5.0",
     "express": "^4.17.1",
-    "redis": "^4.0.0",
-    "pg": "^8.7.0"
+    "pg": "^8.7.0",
+    "redis": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
