--- a/receive-send-api/dockerfile
+++ b/receive-send-api/dockerfile
@@ -6,8 +6,8 @@ COPY package*.json ./
 
 RUN npm install
 
-COPY . ./
+COPY . .
 
-EXPOSE 3000
+EXPOSE 3002
 
-CMD [ "node", "src/server.js" ]
+CMD [ "node", "server.js" ]
