--- a/receive-send-api/package.json
+++ b/receive-send-api/package.json
@@ -2,10 +2,10 @@
   "name": "receive-send-api",
   "version": "1.0.0",
   "description": "API para enviar e receber mensagens do chat",
-  "main": "src/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "chat",
