--- a/record-api/dockerfile
+++ b/record-api/dockerfile
@@ -4,12 +4,12 @@ WORKDIR /app
 
 RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 
-COPY ./requirements.txt /app/
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir --trusted-host pypi.python.org --trusted-host files.pythonhosted.org --trusted-host pypi.org -r requirements.txt
 
-COPY ./src/ /app/src
+COPY . .
 
-EXPOSE 5001
+EXPOSE 5002
 
-CMD ["python", "src/record_api_service.py"]
+CMD ["python", "app.py"]
