--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,9 +87,9 @@ services:
     image: postgres:14-alpine
     container_name: postgres_db_service
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-admin_user} # Default alinhado com .env
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-supersecretpassword} # Default alinhado
-      POSTGRES_DB: ${POSTGRES_DB:-chat_application_db} # Default alinhado
+      POSTGRES_USER: ${POSTGRES_USER:-admin_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-supersecretpassword}
+      POSTGRES_DB: ${POSTGRES_DB:-chat_application_db}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
