--- a/receive-send-api/package.json
+++ b/receive-send-api/package.json
@@ -16,6 +16,7 @@
   "author": "Vitor Henrique Camillo",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.8",
     "axios": "^1.0.0",
     "dotenv": "^16.5.0",
     "express": "^4.17.1",
